[package]
name = "esp32-c3-examples"
version = "0.1.0"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
# Safe Rust wrappers for the services in the ESP IDF SDK. Prefer use it instead of `esp-idf-sys` and `esp-idf-hal`
# Re-exports `esp-idf-hal` and `esp-idf-sys` as `esp_idf_svc::hal` and `esp_idf_svc::sys`.
esp-idf-svc = { version = "0.47.3" }
embedded-svc = "0.26"

toml-cfg      = "0.1"
eyre = "0.6.8"

# stepper motor driver
uln2003 = "0.2"
# port extender
pcf857x = "0.4"

# examples with ds18b29
ds18b20 = "0.1"
one-wire-bus = "0.1"
url = "2.5.0"
headers = "0.4.0"

# examples with display ssd1306
ssd1306 = "0.8"

[build-dependencies]
embuild = "0.31.3"
